# screener

./: README.md  pyproject.toml
screener/: cli.py  executor.py  main.py  sourcetype.py
screener/utils/: never.py
tests/echo/: Dockerfile  docker-compose.yml  main.py
