[tool.poetry]
name = "screener"
version = "0.1.0"
description = "Read stream and take actions"
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
